force-app/main/default/objects/AccountContactRelation/fields/EmailofRelation__c.field-meta.xml
<CustomField>
    <fullName>EmailofRelation__c</fullName>
    <description>Option for the user to add the email address of the contact associated to this account.</description>
    <label>Email of Relation</label>
    <type>Email</type>
</CustomField>