force-app/main/default/objects/AccountContactRelation/fields/MobileofRelation__c.field-meta.xml
<CustomField>
    <fullName>MobileofRelation__c</fullName>
    <description>Option for the user to add the mobile number of the contact associated to this account.</description>
    <label>Mobile of Relation</label>
    <type>Phone</type>
</CustomField>