force-app/main/default/objects/AccountContactRelation/fields/PhoneofRelation__c.field-meta.xml
<CustomField>
    <fullName>PhoneofRelation__c</fullName>
    <description>Option for the user to add the phone number of the contact associated to this account.</description>
    <label>Phone of Relation</label>
    <type>Phone</type>
</CustomField>