force-app/main/default/objects/AccountContactRelation/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The &apos;Title&apos; field allows users to specify the title or role of an external contact within the associated company. This field is useful for identifying the specific responsibilities or position held by the contact in relation to the account. Users can enter the appropriate title to provide additional context and clarity when managing and communicating with external contacts.</description>
    <inlineHelpText>Please enter the title or role of the external contact within the associated company. The &apos;Title&apos; field allows you to specify the specific responsibilities or position held by the contact in relation to the account.</inlineHelpText>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>