force-app/main/default/objects/AccountContactRelation/validationRules/VR01_ACR_PhoneFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_ACR_PhoneFormat</fullName>
    <active>true</active>
    <description>This validation rule prevents users from formatting the phone number without country and area code. According to the E.164 (Default)</description>
    <errorConditionFormula>AND (
Not (ISBLANK ( PhoneofRelation__c )),
$Setup.BypassSettings__c.ValidationRules__c = False,
NOT(REGEX( PhoneofRelation__c , &quot;^\\+?[1-9]\\d{1,14}$&quot;)))</errorConditionFormula>
    <errorDisplayField>PhoneofRelation__c</errorDisplayField>
    <errorMessage>You need to insert the phone number in the correct format. See example: +31735435111 [VR01]</errorMessage>
</ValidationRule>