force-app/main/default/objects/AccountContactRelation/validationRules/VR03_ACR_Contact_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_ACR_Contact_Inactive</fullName>
    <active>true</active>
    <description>When a contact is inactive it&apos;s not allowed to create account-contact record</description>
    <errorConditionFormula>AND(
				$Setup.BypassSettings__c.ValidationRules__c = FALSE,
 Contact.IsNoLongerWorking__c  = TRUE,
ISNEW()
)</errorConditionFormula>
    <errorMessage>It&apos;s not allowed to add a new account contact relationship when the contact is inactive [VR03]</errorMessage>
</ValidationRule>